<resources>
    <string name="app_name">Learning-App</string>
    <string name="learning">Learn</string>
    <string name="test">Test</string>
    <string name="repository">Respository</string>
    <string name="q1">Question - 01</string>
    <string name="q2">Question - 02</string>
    <string name="q3">Question - 03</string>
    <string name="q4">Question - 04</string>
    <string name="q5">Question - 05</string>
    <string name="q6">Question - 06</string>
    <string name="q7">Question - 07</string>
    <string name="q8">Question - 08</string>
    <string name="submit">Submit</string>
    <string name="leanabc">Learn ABC</string>
    <string name="learnnames">Learn Names</string>
</resources>