<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/learn"
        android:layout_width="0dp"
        android:layout_height="79dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="52dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/learning"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/test"
        android:layout_width="305dp"
        android:layout_height="80dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="52dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:fontFamily="sans-serif-black"
        android:text="@string/test"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/repository"
        android:layout_width="0dp"
        android:layout_height="79dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="52dp"
        android:backgroundTint="@color/teal_200"
        android:fontFamily="sans-serif-black"
        android:text="@string/repository"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/test"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="327dp"
        android:layout_height="266dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home" />

</androidx.constraintlayout.widget.ConstraintLayout>